# poincare

./: .gitignore  Cargo.toml  README.md
gsl-splines/: Cargo.toml
gsl-splines/src/: acc.rs  error.rs  lib.rs  spline.rs  spline_types.rs
nc/: Cargo.toml
nc/src/: bfield.rs  coords.rs  currents.rs  error.rs  extract.rs  lib.rs  open.rs  scalars.rs
nc/src/vars/: bfield.rs  coords.rs  currents.rs  mod.rs  scalars.rs
nc/tests/: integration_test.rs
nc/tests/common/: mod.rs
tokamak-netcdf/: Cargo.toml  README.md
tokamak-netcdf/src/: bfield.rs  coords.rs  currents.rs  extract.rs  lib.rs  open.rs  scalars.rs
tokamak-netcdf/tests/: integration_test.rs
tokamak-netcdf/tests/common/: mod.rs
tokamak_netcdf/: Cargo.toml  README.md
tokamak_netcdf/src/: lib.rs
