[workspace]
resolver = "3"
members = ["tokamak-netcdf", "gsl-splines"]
default-members = ["tokamak-netcdf", "gsl-splines"]

[workspace.package]
authors = ["George Tsiamasiotis"]
license = " GPL-3.0-only"
documentation = "https://docs.rs/crate/tokamak-netcdf/"
repository = "https://github.com/George-Tsiamasiotis/poincare-maps.git"
