[package]
name = "tokamak-netcdf"
version = "0.1.1"
edition = "2024"
keywords = ["nc", "netcdf", "tokamak"]
description = """A Package for handling NetCDF files and creating a more suitable interface for
use with reconstructed equilibira."""
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
ndarray = "0.16.1"
netcdf = { version = "0.11.0", features = ["ndarray"] }
thiserror = "2.0.12"

[features]
default = []
docs = ["netcdf/static"]

[package.metadata.docs.rs]
features = ["docs"]
